traversal.snake.Snake.scala.error
Compilation error:
Snake:10: error: type mismatch;
 found   : Unit
 required: Boolean
    }else if(getDirection()==Direction.OUEST){
          ^Snake:22: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
                        ^Snake:22: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
    ^